--- a/Android/MVVM_Template/app/src/main/AndroidManifest.xml
+++ b/Android/MVVM_Template/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.repodetail.RepoDetailActivity"/>
+        <activity android:name=".view.repodetail.RepoDetailActivity"
+            />
     </application>
 
 </manifest>
